fluxcd/app/front/webapp/prod/patches-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: webapp-route
spec:
  hostnames:
    - "webapp.example.com"
